chore: carry over in-progress wizard and backend work from previous sessions
Uncommitted changes accumulated on release/3.2.0: wallet-creation wizard
steps/tests, shared UI primitives (Badge, Textarea, InviteComposer,
RoleSelector), subscription cascade-delete fix in WalletService with its
repository test, and assorted backend service/test updates.

Committed as-is so the atomic wallet-creation task starts from a clean tree.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>